--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+.leaflet-container {
+	height: 98vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.clearAllMarkersBtn {
+	position: absolute;
+	top: 10px;
+	left: 50px;
+	z-index: 500;
+	padding: 6px 10px;
+	cursor: pointer;
+	font-weight: 700;
+	font-size: 16px;
 }
+
+.clearMarker {
+	padding: 4px;
+	cursor: pointer;
+	width: 100%;
+	position: relative;
+	z-index: 500;
+}
+
+.leaflet-popup-content div {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+p {
+	font-weight: 700;
+	font-size: 16px;
+	margin-bottom: 10px !important;
+}
+
+
